--- a/root/index.html
+++ b/root/index.html
@@ -8,48 +8,133 @@
   <title>Fitness</title>
 
   <!--build:css css/styles.min.css-->
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/styles.css">
   <!--endbuild-->
 </head>
 
 <body>
 
-  <nav class="navbar navbar-expand-lg">
-    <h1 class="navbar-brand">
-      <a href="">
-        <img src="images/logo.png" alt="">
-      </a>
-    </h1>
+  <header class="header">
+    <div class="header__bg">
 
-    <div class="navbar-collapse">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a href="" class="nav-link">Intro</a>
+    </div>
+    <!-- <img class="header__bg" src="images/header-bg.png" alt=""> -->
+    <div class="overlay-header"></div>
+    <div class="container header__slogan">
+      <p class="header__slogan--1">Take care of your body. </p>
+      <h2 class="header__slogan--2">It's the only place you have to live.</h2>
+    </div>
+
+    <div class="nav-container">
+      <nav class="nav">
+        <h1 class="nav__brand">
+          <a href="" class="nav__brand__link">
+            <img class="nav__brand__img logo" src="images/logo.png" alt="">
+            <img class="nav__brand__img fix" src="images/logo_fix.png" alt="">
+          </a>
+        </h1>
+
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="" class="nav__link">Intro</a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">Services</a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">Team</a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">Pricing</a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">Revervation</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
+    <div class="box container">
+      <ul class="list">
+        <li class="box__item schedule">
+          <div class="overlay-item">
+            <!-- <img src="images/header-item-bg.png" alt=""> -->
+          </div>
+          <span class="box__title">Today's Schedule</span>
+          <ul class="slider owl-carousel owl-theme">
+            <li class="item">
+              <div class="slider__content">
+                <span>Early Exercise</span>
+                <span>8:30 - 10:00</span>
+              </div>
+              <div class="slider__content">
+                <span>Muscle Building</span>
+                <span>8:30 - 10:00</span>
+              </div>
+              <div class="slider__content">
+                <span>Cardio</span>
+                <span>8:30 - 10:00</span>
+              </div>
+            </li>
+            <li class="item">
+              <div class="slider__content">
+                <span>Early Exercise</span>
+                <span>8:30 - 10:00</span>
+              </div>
+              <div class="slider__content">
+                <span>Muscle Building</span>
+                <span>8:30 - 10:00</span>
+              </div>
+              <div class="slider__content">
+                <span>Cardio</span>
+                <span>8:30 - 10:00</span>
+              </div>
+            </li>
+            <li class="item">
+              <div class="slider__content">
+                <span>Early Exercise</span>
+                <span>8:30 - 10:00</span>
+              </div>
+              <div class="slider__content">
+                <span>Muscle Building</span>
+                <span>8:30 - 10:00</span>
+              </div>
+              <div class="slider__content">
+                <span>Cardio</span>
+                <span>8:30 - 10:00</span>
+              </div>
+            </li>
+
+          </ul>
         </li>
-        <li class="nav-item">
-          <a href="" class="nav-link">Services</a>
+        <li class="box__item membership">
+          <div class="overlay-item">
+            <!-- <img src="images/header-item-bg.png" alt=""> -->
+          </div>
+          <span class="box__title">Premium Membership</span>
+          <div class="content">
+            <span>Register Today</span>
+            <span>20% discount</span>
+          </div>
+          <a href="" class="membership__link">Register</a>
         </li>
-        <li class="nav-item">
-          <a href="" class="nav-link">Team</a>
-        </li>
-        <li class="nav-item">
-          <a href="" class="nav-link">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a href="" class="nav-link">Revervation</a>
+        <li class="box__item clients">
+          <div class="overlay-item">
+            <img src="images/header-item-bg.png" alt="">
+          </div>
+          <span class="box__title">Happy Clients</span>
+          <p>dd</p>
         </li>
       </ul>
     </div>
-  </nav>
-
-  <header class="header">
-    <div class="overlay-header"></div>
-    <div class="container">
-
-    </div>
   </header>
 
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!--build:js js/main.min.js -->
+  <script src="js/owl.carousel.min.js"></script>
   <script src="js/main.js"></script>
   <!-- endbuild -->
 </body>
