--- a/root/index.html
+++ b/root/index.html
@@ -171,6 +171,74 @@
         </ul>
       </div>
     </section>
+
+    <section class="section team">
+      <div class="container">
+        <div class="section__header">
+          <h2 class="section__title">Team</h2>
+          <p class="section__desc">We’re dream team!</p>
+        </div>
+
+        <ul class="row">
+          <li class="col-md-4 team__item">
+            <div class="team__header">
+              <div class="team__hover">
+                <div class="team__hover__content">
+                  <span>$69.00</span>
+                  <span>1 - 5 sessions/ month</span>
+                </div>
+              </div>
+              <img class="team__bg-img" src="images/team-bg.png" alt="">
+            </div>
+            <div class="team__ava">
+              <img class="team__ava__img" src="images/team-ava1.png" alt="">
+            </div>
+            <div class="team__content">
+              <h4 class="team__name">Eva Adamson</h4>
+              <p class="team__desc">Fitness Instructor</p>
+              <a class="team__link" href="">Sign Up now</a>
+            </div>
+          </li>
+          <li class="col-md-4 team__item">
+            <div class="team__header">
+              <div class="team__hover">
+                <div class="team__hover__content">
+                  <span>$69.00</span>
+                  <span>1 - 5 sessions/ month</span>
+                </div>
+              </div>
+              <img class="team__bg-img" src="images/team-bg.png" alt="">
+            </div>
+            <div class="team__ava">
+              <img class="team__ava__img" src="images/team-ava1.png" alt="">
+            </div>
+            <div class="team__content">
+              <h4 class="team__name">Eva Adamson</h4>
+              <p class="team__desc">Fitness Instructor</p>
+              <a class="team__link" href="">Sign Up now</a>
+            </div>
+          </li>
+          <li class="col-md-4 team__item">
+            <div class="team__header">
+              <div class="team__hover">
+                <div class="team__hover__content">
+                  <span>$69.00</span>
+                  <span>1 - 5 sessions/ month</span>
+                </div>
+              </div>
+              <img class="team__bg-img" src="images/team-bg.png" alt="">
+            </div>
+            <div class="team__ava">
+              <img class="team__ava__img" src="images/team-ava1.png" alt="">
+            </div>
+            <div class="team__content">
+              <h4 class="team__name">Eva Adamson</h4>
+              <p class="team__desc">Fitness Instructor</p>
+              <a class="team__link" href="">Sign Up now</a>
+            </div>
+          </li>
+        </ul>
+    </section>
   </main>
 
 
